[project]
name = "school-network-topology-diagram"
version = "0.1.0"
description = "Network documentation lab that converts synthetic devices and links into an automatic topology diagram."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
